Use one list of IPs

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@
 SUPPORT_EMAIL=support@example.com
 
 # allow read-only access from local development
-READONLY_IP_WHITELIST=127.0.0.1
+IP_ALLOWLIST=127.0.0.1
