--- a/config/kubernetes/production/deployment.yaml
+++ b/config/kubernetes/production/deployment.yaml
@@ -60,8 +60,9 @@ spec:
                   value: https
                 - name: X-Forwarded-Ssl
                   value: "on"
-            initialDelaySeconds: 40
-            periodSeconds: 60
+            initialDelaySeconds: 10
+            periodSeconds: 10
+            timeoutSeconds: 10
           livenessProbe:
             httpGet:
               path: /ping
