--- a/config/kubernetes/production/cron-person-notifier.yaml
+++ b/config/kubernetes/production/cron-person-notifier.yaml
@@ -5,6 +5,8 @@ metadata:
 spec:
   schedule: "0,5,10,15,20,25,30,35,40,45,50,55 * * * *"
   concurrencyPolicy: Forbid
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 3
   jobTemplate:
     spec:
       template:
