--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,9 +60,6 @@ jobs:
       - name: Precompile assets
         run: bin/rails assets:precompile
 
-      - name: Setup test database
-        run: bin/rake parallel:setup
-
       - name: Lint Ruby files
         run: bundle exec rubocop
 
@@ -70,7 +67,9 @@ jobs:
         run: bundle exec brakeman -q
 
       - name: Run tests
-        run: bundle exec parallel_rspec -n "${CI_TOTAL_JOBS" --only-group $"{CI_JOB_INDEX}" --group-by "runtime"
+        run: |
+          bin/rake parallel:setup[1]
+          bundle exec parallel_rspec -n "${CI_TOTAL_JOBS" --only-group $"{CI_JOB_INDEX}" --group-by "runtime"
 
       - name: Code coverage
         uses: joshmfrankel/simplecov-check-action@main
