--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,7 +69,7 @@ jobs:
         run: bundle exec brakeman -q
 
       - name: Run tests
-        run: bundle exec parallel_rspec -n "${CI_TOTAL_JOBS" --only-group $"{CI_JOB_INDEX}" --group-by "runtime"
+        run: bundle exec parallel_rspec -n "${CI_TOTAL_JOBS}" --only-group $"{CI_JOB_INDEX}" --group-by "runtime"
 
       - name: Code coverage
         uses: joshmfrankel/simplecov-check-action@main
