--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,14 +87,43 @@ jobs:
       - name: Run tests
         run: bundle exec parallel_rspec -n "${CI_TOTAL_JOBS}" --only-group "${CI_JOB_INDEX}" --group-by "runtime"
 
-      - name: Code coverage
-        uses: joshmfrankel/simplecov-check-action@main
+      - name: Upload coverage
+        uses: actions/upload-artifact@v4
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          minimum_suite_coverage: 95
-          minimum_file_coverage: 100
+          name: coverage-${{env.CI_JOB_INDEX}}
+          path: coverage/.resultset.json
+
+  coverage:
+    - needs: test
+      runs-on: ubuntu-latest
+      permissions: write-all
+      env:
+        RAILS_ENV: test
+      steps:
+        - name: Checkout code
+          uses: actions/checkout@v4
+
+        - name: Setup Ruby and install gems
+          uses: ruby/setup-ruby@v1
+          with:
+            bundler-cache: true
+
+        - name: Download coverage
+          uses: actions/download-artifact@v4
+          with:
+            path: coverage
+
+        - name: Collate coverage
+          run: bundle exec rake coverage:report
+
+        - name: Code coverage
+          uses: joshmfrankel/simplecov-check-action@main
+          with:
+            github_token: ${{ secrets.GITHUB_TOKEN }}
+            minimum_suite_coverage: 95
+            minimum_file_coverage: 100
 
   build-and-deploy:
-    needs: test
+    needs: [linting, coverage]
     uses: ./.github/workflows/deploy.yml
     secrets: inherit
