use separate coverage names

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -141,7 +141,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           include-hidden-files: true
-          name: coverage-${{env.CI_JOB_INDEX}}
+          name: coverage-features-and-uploads-${{env.CI_JOB_INDEX}}
           path: coverage/.resultset.json
 
   coverage:
@@ -159,9 +159,15 @@ jobs:
         with:
           bundler-cache: true
 
-      - name: Download coverage
+      - name: Download coverage for non-feature and non-upload tests
         uses: actions/download-artifact@v4
         with:
+          path: coverage
+
+      - name: Download coverage for features and uploads
+        uses: actions/download-artifact@v4
+        with:
+          name: coverage-features-and-uploads
           path: coverage
 
       - name: Collate coverage
