--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -85,67 +85,67 @@ jobs:
           name: coverage-${{env.CI_JOB_INDEX}}
           path: coverage/.resultset.json
 
-  features-and-uploads:
-    runs-on: ubuntu-latest
-    permissions:
-      checks: write
-
-    strategy:
-      fail-fast: false
-      matrix:
-        ci_total_jobs: [2]
-        ci_job_index: ["0", "1"]
-
-    env:
-      RAILS_ENV: test
-      DATABASE_URL: "postgresql://postgres:postgres@127.0.0.1/peoplefinder_test"
-      CI: true
-      CI_TOTAL_JOBS: ${{ matrix.ci_total_jobs }}
-      CI_JOB_INDEX: ${{ matrix.ci_job_index }}
-
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_DB: peoplefinder_test
-          POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: postgres
-        ports:
-          - 5432:5432
-        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
-
-      opensearch:
-        image: bitnami/opensearch:latest
-        ports:
-          - 9200:9200
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Ruby and install gems
-        uses: ruby/setup-ruby@v1
-        with:
-          bundler-cache: true
-
-      - name: Install GraphicsMagick
-        run: sudo apt-get update && sudo apt-get install -y graphicsmagick
-
-      - name: Precompile assets
-        run: bin/rails assets:precompile
-
-      - name: Run feature and uploader tests
-        run: bundle exec parallel_rspec spec/features spec/uploaders -n "${CI_TOTAL_JOBS}" --only-group "${CI_JOB_INDEX}" --group-by "runtime"
-
-      - name: Upload coverage
-        uses: actions/upload-artifact@v4
-        with:
-          include-hidden-files: true
-          name: coverage-features-and-uploads-${{env.CI_JOB_INDEX}}
-          path: coverage/.resultset.json
+#  features-and-uploads:
+#    runs-on: ubuntu-latest
+#    permissions:
+#      checks: write
+#
+#    strategy:
+#      fail-fast: false
+#      matrix:
+#        ci_total_jobs: [2]
+#        ci_job_index: ["0", "1"]
+#
+#    env:
+#      RAILS_ENV: test
+#      DATABASE_URL: "postgresql://postgres:postgres@127.0.0.1/peoplefinder_test"
+#      CI: true
+#      CI_TOTAL_JOBS: ${{ matrix.ci_total_jobs }}
+#      CI_JOB_INDEX: ${{ matrix.ci_job_index }}
+#
+#    services:
+#      postgres:
+#        image: postgres:16-alpine
+#        env:
+#          POSTGRES_DB: peoplefinder_test
+#          POSTGRES_USER: postgres
+#          POSTGRES_PASSWORD: postgres
+#        ports:
+#          - 5432:5432
+#        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+#
+#      opensearch:
+#        image: bitnami/opensearch:latest
+#        ports:
+#          - 9200:9200
+#
+#    steps:
+#      - name: Checkout code
+#        uses: actions/checkout@v4
+#
+#      - name: Setup Ruby and install gems
+#        uses: ruby/setup-ruby@v1
+#        with:
+#          bundler-cache: true
+#
+#      - name: Install GraphicsMagick
+#        run: sudo apt-get update && sudo apt-get install -y graphicsmagick
+#
+#      - name: Precompile assets
+#        run: bin/rails assets:precompile
+#
+#      - name: Run feature and uploader tests
+#        run: bundle exec parallel_rspec spec/features spec/uploaders -n "${CI_TOTAL_JOBS}" --only-group "${CI_JOB_INDEX}" --group-by "runtime"
+#
+#      - name: Upload coverage
+#        uses: actions/upload-artifact@v4
+#        with:
+#          include-hidden-files: true
+#          name: coverage-features-and-uploads-${{env.CI_JOB_INDEX}}
+#          path: coverage/.resultset.json
 
   coverage:
-    needs: [test, features-and-uploads]
+    needs: test
     runs-on: ubuntu-latest
     permissions: write-all
     env:
