--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,7 +59,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       opensearch:
-        image: bitnami/opensearch:latest
+        image: opensearchproject/opensearch:latest
         ports:
           - 9200:9200
 
@@ -106,7 +106,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       opensearch:
-        image: bitnami/opensearch:latest
+        image: opensearchproject/opensearch:latest
         ports:
           - 9200:9200
 
