--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -59,9 +59,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       opensearch:
-        env:
-          OPENSEARCH_INITIAL_ADMIN_PASSWORD: admin
-        image: opensearchproject/opensearch:latest
+        image: bitnamilegacy/opensearch:3.2.0
         ports:
           - 9200:9200
 
@@ -108,9 +106,7 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
 
       opensearch:
-        env:
-          OPENSEARCH_INITIAL_ADMIN_PASSWORD: admin
-        image: opensearchproject/opensearch:latest
+        image: bitnamilegacy/opensearch:3.2.0
         ports:
           - 9200:9200
 
